Fixing truncations for smaller screens and aligning lyrics

--- a/The ABC of MPB/css/artist_orig.css
+++ b/The ABC of MPB/css/artist_orig.css
@@ -12,11 +12,11 @@ body {
 nav{
 /*	background-color:#CCCCCC; */
 	float: right;
-	width:59%;
+	width:900px;
 	position: fixed;
 	right:0%;
 	top:70px;
-	height: 7%;
+	height: 30px;
 /*	border: solid 5px #566778;*/
 	
 }
@@ -33,8 +33,8 @@ nav ul li{
 	float:left;
 	text-align: center;
 	list-style-type:none; 
-	margin-left:13%;
-	margin-right:7%;
+	margin-left:130px;
+	margin-right:70px;
 	margin-top:-15px;
 	
 	
@@ -47,8 +47,8 @@ nav ul li{
 .artist{
 	float: right;
 	background-color:#FFFFAA;
-	width:59%;
-	height: 7%;
+	width:900px;
+	height: 50px;
 	position: fixed;
 	right:0%;
 	top:0px;
@@ -63,9 +63,9 @@ nav ul li{
 	background-color:#FEFEFE;
 	position: fixed;
 	bottom:0px;
-	right:30%;
-	width:29%;
-	height: 82%;
+	right:460px;
+	width:440px;
+	height: 620px;
 	border: solid 5px #566778;
 	overflow-y: scroll;
 	color:blue;
@@ -79,8 +79,8 @@ nav ul li{
 	position: fixed;
 	bottom:0px;
 	right:0%;
-	width:29%;
-	height: 82%;
+	width:440px;
+	height: 620px;
 	border: solid 5px #566778;
 	overflow-y: scroll;
 	color:white;
@@ -94,8 +94,8 @@ nav ul li{
 	position: fixed;
 	bottom:0px;
 	left:0%;
-	width:39%;
-	height:43%;
+	width:600px;
+	height:320px;
 	border: solid 5px #223322;
 	overflow-y: scroll;
 	
@@ -104,8 +104,8 @@ nav ul li{
 .pictures{
 	background-color:#666666;
 	float:left;
-	width:39%;
-	height: 52%;
+	width:600px;
+	height: 400px;
 	position: fixed;
 	top:0px;
 	left:0%;
@@ -172,7 +172,7 @@ background-color:#EDEDED;
 	background-color:rgb(0,0,0);
 	text-align:left;
 	position:center;
-	width:auto;
+	width:580px;
 /*	margin:30px auto;*/
 	overflow:hidden;
 	border:10px solid #000;
